# ForkDesk

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  res.qrc
components/: CMakeLists.txt  dockbar.h  dockbaritem.cpp  dynamicisland.cpp  dynamicisland.h  themebutton.cpp  themebutton.h  themetextlabel.h
main/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  dockbar.cpp  dockbaritem.cpp  dockbaritem.h
public/: CMakeLists.txt  definestd.h  keyboardListener.cpp  keyboardListener.h  publiccache.h  publicfunction.cpp  publicfunction.h
software/: CMakeLists.txt  keyboard.cpp  keyboard.h  keyboarditem.cpp  keyboarditem.h  keyboardsetting.cpp  keyboardsetting.h
src/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  definestd.h  dockbar.cpp  dockbar.h  dockbaritem.cpp  dockbaritem.h  dynamicisland.cpp  dynamicisland.h  mainwindow.cpp  mainwindow.h  publiccache.cpp  themebutton.cpp  themebutton.h  themetextlabel.cpp
